force-app/main/default/objects/AV_IconsFSC__c/AV_IconsFSC__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Almacena la información con los iconos que se utilizan en Mis clientes (mapa de productos, indicador de cliente, experiencia cliente...)</description>
    <label>AV_Iconografia_FSC</label>
</CustomObject>