force-app/main/default/objects/AV_IconsFSC__c/fields/AV_DiaDiaAzul__c.field-meta.xml
<CustomField>
    <fullName>AV_DiaDiaAzul__c</fullName>
    <description>Icono día a día azul</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Día a Día Azul</label>
    <length>255</length>
    <type>Text</type>
</CustomField>