force-app/main/default/objects/AV_IconsFSC__c/fields/AV_DiaDiaBlanco__c.field-meta.xml
<CustomField>
    <fullName>AV_DiaDiaBlanco__c</fullName>
    <description>icono dia a dia blanco</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Día a Día Blanco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>