force-app/main/default/objects/AV_IconsFSC__c/fields/AV_EmailDevName__c.field-meta.xml
<CustomField>
    <fullName>AV_EmailDevName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>