force-app/main/default/objects/AV_IconsFSC__c/fields/AV_GreenIndicatorIcon__c.field-meta.xml
<CustomField>
    <fullName>AV_GreenIndicatorIcon__c</fullName>
    <description>icono indicador verde</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Indicador verde</label>
    <length>255</length>
    <type>Text</type>
</CustomField>