force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconAlertaComercial__c.field-meta.xml
<CustomField>
    <fullName>AV_IconAlertaComercial__c</fullName>
    <description>icono alerta comercial</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconAlertaComercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>