force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconEntrevista__c.field-meta.xml
<CustomField>
    <fullName>AV_IconEntrevista__c</fullName>
    <description>icono entrevista</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconEntrevista</label>
    <length>255</length>
    <type>Text</type>
</CustomField>