force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconLlamada__c.field-meta.xml
<CustomField>
    <fullName>AV_IconLlamada__c</fullName>
    <description>icono llamada</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconLlamada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>