force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconMuro__c.field-meta.xml
<CustomField>
    <fullName>AV_IconMuro__c</fullName>
    <description>icono muro</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconMuro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>