force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconMyBox__c.field-meta.xml
<CustomField>
    <fullName>AV_IconMyBox__c</fullName>
    <description>icono mybox</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AV_IconMyBox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>