force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconNoEncuesta__c.field-meta.xml
<CustomField>
    <fullName>AV_IconNoEncuesta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IconNoEncuesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>