force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconOportunidad2__c.field-meta.xml
<CustomField>
    <fullName>AV_IconOportunidad2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IconOportunidad2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>