force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconPensarFuturoAzul__c.field-meta.xml
<CustomField>
    <fullName>AV_IconPensarFuturoAzul__c</fullName>
    <description>icono pensar futuro azul</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconPensarFuturoAzul</label>
    <length>255</length>
    <type>Text</type>
</CustomField>