force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconProdCDiana__c.field-meta.xml
<CustomField>
    <fullName>AV_IconProdCDiana__c</fullName>
    <description>icono prod  diana</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconProdCDiana</label>
    <length>255</length>
    <type>Text</type>
</CustomField>