force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconProdCOportunidad__c.field-meta.xml
<CustomField>
    <fullName>AV_IconProdCOportunidad__c</fullName>
    <description>icono prod oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconProdCOportunidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>