force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconProdTTiene__c.field-meta.xml
<CustomField>
    <fullName>AV_IconProdTTiene__c</fullName>
    <description>icono prod tiene</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconProdTTiene</label>
    <length>255</length>
    <type>Text</type>
</CustomField>