force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconProdTTuvo__c.field-meta.xml
<CustomField>
    <fullName>AV_IconProdTTuvo__c</fullName>
    <description>icono prod tuvo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconProdTTuvo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>