force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconProductoNotiene__c.field-meta.xml
<CustomField>
    <fullName>AV_IconProductoNotiene__c</fullName>
    <description>icono no tiene producto</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconProductoNotiene</label>
    <length>255</length>
    <type>Text</type>
</CustomField>