force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconProductoNotienePuntoLarge__c.field-meta.xml
<CustomField>
    <fullName>AV_IconProductoNotienePuntoLarge__c</fullName>
    <description>icono no tiene producto punto largo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconProductoNotienePuntoLarge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>