force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconProductoTuvoPuntoLarge__c.field-meta.xml
<CustomField>
    <fullName>AV_IconProductoTuvoPuntoLarge__c</fullName>
    <description>icono tuvo producto punto largo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconProductoTuvoPuntoLarge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>