force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconPuedeMas__c.field-meta.xml
<CustomField>
    <fullName>AV_IconPuedeMas__c</fullName>
    <description>icono puede mas</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconPuedeMas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>