force-app/main/default/objects/AV_IconsFSC__c/fields/AV_IconVisita__c.field-meta.xml
<CustomField>
    <fullName>AV_IconVisita__c</fullName>
    <description>icono visita</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IconVisita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>