force-app/main/default/objects/AV_IconsFSC__c/fields/AV_LabelContento__c.field-meta.xml
<CustomField>
    <fullName>AV_LabelContento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Label Contento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>