force-app/main/default/objects/AV_IconsFSC__c/fields/AV_LabelDescontento__c.field-meta.xml
<CustomField>
    <fullName>AV_LabelDescontento__c</fullName>
    <description>etiqueta descuento</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Label Descontento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>