force-app/main/default/objects/AV_IconsFSC__c/fields/AV_LabelEntrevista__c.field-meta.xml
<CustomField>
    <fullName>AV_LabelEntrevista__c</fullName>
    <description>etiqueta entrevista</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Label Entrevista</label>
    <length>255</length>
    <type>Text</type>
</CustomField>