force-app/main/default/objects/AV_IconsFSC__c/fields/AV_LabelLlamada__c.field-meta.xml
<CustomField>
    <fullName>AV_LabelLlamada__c</fullName>
    <description>etiqueta llamada</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Label Llamada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>