force-app/main/default/objects/AV_IconsFSC__c/fields/AV_LabelNeutral__c.field-meta.xml
<CustomField>
    <fullName>AV_LabelNeutral__c</fullName>
    <description>etiqueta neutral</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Label Neutral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>