force-app/main/default/objects/AV_IconsFSC__c/fields/AV_LabelNoEncuesta__c.field-meta.xml
<CustomField>
    <fullName>AV_LabelNoEncuesta__c</fullName>
    <description>etiqueta no encuesta</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Label No Encuesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>