force-app/main/default/objects/AV_IconsFSC__c/fields/AV_LabelOtros__c.field-meta.xml
<CustomField>
    <fullName>AV_LabelOtros__c</fullName>
    <description>etiqueta otros</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Label Otros</label>
    <length>255</length>
    <type>Text</type>
</CustomField>