force-app/main/default/objects/AV_IconsFSC__c/fields/AV_LabelVisita__c.field-meta.xml
<CustomField>
    <fullName>AV_LabelVisita__c</fullName>
    <description>etiqueta visita</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Label Visita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>