force-app/main/default/objects/AV_IconsFSC__c/fields/AV_VideollamadaDevName__c.field-meta.xml
<CustomField>
    <fullName>AV_VideollamadaDevName__c</fullName>
    <description>videollamada developer name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Videollamada Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>