force-app/main/default/objects/AV_IconsFSC__c/fields/AV_VisitaDevName__c.field-meta.xml
<CustomField>
    <fullName>AV_VisitaDevName__c</fullName>
    <description>visita developer name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Visita Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>